simpler build.gradle + misc