@@ -22,87 +22,31 @@ repositories {
 
 dependencies {
 
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.2'
-    compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: '1.7.2'
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '0.9.24'
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '0.9.24'
-    compile group: 'org.springframework', name: 'spring-aop', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-aspects', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-beans', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context-support', version: '4.0.1.RELEASE'
+
+    compile 'org.slf4j:slf4j-api:1.7.5'
+
     compile group: 'org.springframework', name: 'spring-core', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-expression', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-instrument', version: '4.0.1.RELEASE'
     compile group: 'org.springframework', name: 'spring-web', version: '4.0.1.RELEASE'
     compile group: 'org.springframework', name: 'spring-webmvc', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jdbc', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework', name: 'spring-orm', version: '4.0.1.RELEASE'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.4.3.RELEASE'
-    compile group: 'org.springframework', name: 'spring-tx', version: '4.0.1.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-web', version: '3.2.0.RELEASE'
-    compile group: 'org.springframework.security', name: 'spring-security-config', version: '3.2.0.RELEASE'
-    compile group: 'net.sf.dozer', name: 'dozer', version: '5.4.0'
-    compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.0.1.Final'
-    compile group: 'org.hibernate', name: 'hibernate-core', version: '4.2.6.Final'
-    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '4.2.6.Final'
-    compile group: 'net.sf.ehcache', name: 'ehcache-core', version: '2.4.3'
+
     compile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.1'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.2.3'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.2.3'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.2.3'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
-    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
-    compile group: 'commons-configuration', name: 'commons-configuration', version: '1.7'
+
     compile group: 'com.google.collections', name: 'google-collections', version: '1.0'
-    compile group: 'joda-time', name: 'joda-time', version: '2.3'
 
 
     testCompile group: 'junit', name: 'junit', version: '4.5'
-    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.5'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.0.1.RELEASE'
 
     /**
      Needed to add this dependency to avoid this error:
      java.lang.ClassFormatError: Absent Code attribute in method that is not native or abstract in class file javax/servlet/SessionTrackingMode
      */
-    testCompile group: 'org.glassfish', name: 'javax.servlet', version: '3.0'
+    testCompile group: 'org.glassfish.main.extras', name: 'glassfish-embedded-all', version: '3.1.2.2'
 
     //Needed to move servlet to last for JUnit tests to work.
     providedCompile group: 'javax', name: 'javaee-api', version: '6.0'
 }
 
 
-test {
-    // enable TestNG support (default is JUnit)
-    //useTestNG()
-
-    // set a system property for the test JVM(s)
-    systemProperty 'some.prop', 'value'
-
-    // explicitly include or exclude tests
-    //include 'org/foo/**'
-    //exclude 'org/boo/**'
-
-    // show standard out and standard error of the test JVM(s) on the console
-    testLogging.showStandardStreams = true
-
-    testSrcDirs = ["src/main/test/java"]
-
-    // set heap size for the test JVM(s)
-    minHeapSize = "128m"
-    maxHeapSize = "512m"
-
-    // set JVM arguments for the test JVM(s)
-    jvmArgs '-XX:MaxPermSize=256m'
-
-    // listen to events in the test execution lifecycle
-    beforeTest { descriptor ->
-        logger.lifecycle("Running test: " + descriptor)
-    }
-
-    // listen to standard out and standard error of the test JVM(s)
-    onOutput { descriptor, event ->
-        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
-    }
-}
